<?xml version="1.0"?>
<package format="2">
  <name>marine_traffic_com</name>
  <version>0.0.0</version>
  <description>The marine_traffic_com package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geographic_msgs</depend>
  <depend>project11_msgs</depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>project11</depend>

  <export>
  </export>
</package>
